Added showing microdrive label when expanding qlay mdv files of size 174930 bytes
Added action to trigger left-right movement on joystick, to play Decathlon-like games
Added another easter egg ;)

Improved portability of shell scripts
Improved Debug CPU: 
-now it highlights which registers will be modified by the opcode at the cursor position
-added t-states counter on default view

Improved ZX Vision:
-ZX Desktop: allow to set a background SCR file
-ZX Desktop: added setting to disable ZX Desktop when going to full screen 
-Better detection of any file size of 6912 bytes is guessed as Spectrum screen
-Added AmigaOS GUI style
-Added Atari TOS GUI style
-Added OS/2 GUI style
-Improve RetroMac GUI style: striped title bar
-Improve BeOS GUI style: buttons positions right after the title

Improved Accessibility: added direct settings for inverse colours and gray mode
Improved handling of individual colour palettes modifications (Red, Green, Blue)

Fixed disabling border when realvideo enabled on machines: Colecovision, Master System, MSX, SG1000, SpectraVideo
Fixed segfault pressing F5 after pressing pause key
Fixed preserve breakpoints state when doing smartload
Fixed refreshing Visual Real Tape window when Top Speed condition
Fixed drawing close button on background windows
Fixed redrawing footer when fade out
Fixed bug restoring windows on startup when a previous error was generated

Some other minor bugfixes and improvements



Version 10.0 - Clive Sinclair edition. 4 October 2021

There are lots of changes in this version, but some of them are remarkable:

- New machine emulated: Sega Master System
- "Time machine" features: Automatic Snapshots to RAM + Rewind feature, backwards debugging, backwards run
- Realtime translation of text adventure games in a ZEsarUX window
- Can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)